--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "axios": "^1.6.7",
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
@@ -20,6 +21,7 @@
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "autoprefixer": "^10.4.17",
     "nuxt-icon": "^0.6.8",
+    "nuxt-mdi": "^1.1.6",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1"
   }
