--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
+    "vue-advanced-cropper": "^2.8.8",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
